Moduł szukający Grześka

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Pyciak\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\Grzesiek\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
