--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=MovieBase
@@ -27,19 +26,21 @@ dist.jar=${dist.dir}/MovieBase.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jna-3.4.0.jar=libs\\jna-3.4.0.jar
-file.reference.mysql-connector-java-5.1.22-bin.jar=F:\\grzesiek\\Dokumenty Grze\u015bka\\STUUUUDIA\\rok IV\\projekt\\mysql-connector-java-5.1.22\\mysql-connector-java-5.1.22-bin.jar
+file.reference.ormlite-core-4.42.jar=libs\\ormlite-core-4.42.jar
+file.reference.ormlite-jdbc-4.42.jar=libs\\ormlite-jdbc-4.42.jar
 file.reference.platform-3.4.0.jar=libs\\platform-3.4.0.jar
+file.reference.sqlite-jdbc-3.7.2.jar=libs\\sqlite-jdbc-3.7.2.jar
 file.reference.vlcj-2.1.0.jar=libs\\vlcj-2.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.22-bin.jar}:\
-    ${file.reference.jna-3.4.0.jar}:\
     ${file.reference.platform-3.4.0.jar}:\
-    ${file.reference.vlcj-2.1.0.jar}
+    ${file.reference.vlcj-2.1.0.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${file.reference.ormlite-core-4.42.jar}:\
+    ${file.reference.ormlite-jdbc-4.42.jar}
     ${file.reference.jna-3.4.0.jar}:\
     ${file.reference.platform-3.4.0.jar}:\
     ${file.reference.vlcj-2.1.0.jar}
@@ -48,8 +49,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
